src/index.css
/** Styles for my personal webpage **/

body {
    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
}

#main {
    padding-top: 10px;
    padding-left: 40px;
    width: 700px;
}

.my-name {
    border-bottom: 2px solid gray;
    width: 50%;
}

.bio {
    padding-bottom: 30px;
    font-size: larger;
}

.email-link {
    text-decoration: none;
    color: black;
    text-transform: uppercase;
    font-weight: bold;
}
.email-link:hover {
    color: gray;
}

.contact-holder {
    padding-bottom: 10px;
}
.contact {
    padding-left: 25px;
    background-image: url(envelope.svg);
    background-repeat: no-repeat;
    background-size: contain;
}

.cv-link-holder {
    padding-right: 2px;
}
.cv-link {
    border: black solid 1px;
    color: white;
    font-weight: bold;
    background-color: black;
    text-decoration: none;
    padding: 10px;
}
.cv-link:hover {
    background-color: gray;
    border: gray solid 1px;
}

